礼物模块谢盖,个人界面绘制

--- a/InKeLive-gcz_99/InKeLive/Person/MineViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/MineViewController.xib
@@ -21,16 +21,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iod-E2-5je">
-                    <rect key="frame" x="0.0" y="169" width="375" height="463"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="478"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="463" id="ckt-B5-Pps"/>
+                        <constraint firstAttribute="height" constant="478" id="ckt-B5-Pps"/>
                     </constraints>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="iod-E2-5je" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="169" id="3zR-gq-lG6"/>
+                <constraint firstItem="iod-E2-5je" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3zR-gq-lG6"/>
                 <constraint firstItem="iod-E2-5je" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="p2T-pb-1aj"/>
                 <constraint firstAttribute="trailing" secondItem="iod-E2-5je" secondAttribute="trailing" id="q5g-1y-d8H"/>
             </constraints>
