--- a/InKeLive-gcz_99/InKeLive/Person/MineHeadView.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/MineHeadView.xib
@@ -12,11 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="b0T-Cd-KFs" customClass="MineHeadView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="169"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="255"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_head_bg" translatesAutoresizingMaskIntoConstraints="NO" id="aKk-fn-f7o">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="169"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="167" id="g9X-Ri-6uR"/>
+                    </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nj6-t0-Vq8">
                     <rect key="frame" x="-0.5" y="35" width="375" height="16"/>
@@ -27,7 +30,7 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hJy-Us-8kR">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_head" translatesAutoresizingMaskIntoConstraints="NO" id="hJy-Us-8kR">
                     <rect key="frame" x="13" y="74" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="YLL-bI-1U2"/>
@@ -69,37 +72,113 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mEX-T7-fF8">
+                    <rect key="frame" x="0.0" y="161" width="375" height="86"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0金币" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CE1-zI-A4R">
+                            <rect key="frame" x="13" y="11" width="349" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="GIA-v6-J5U"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="还需消费1000金币可升到超级皇冠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZb-eG-g0w">
+                            <rect key="frame" x="12" y="50" width="351" height="12"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="12" id="OJG-61-JcM"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="12" id="hM7-Sz-CtX"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fr9-ve-ocZ">
+                            <rect key="frame" x="286" y="23" width="76" height="38"/>
+                            <color key="backgroundColor" red="1" green="0.81176470588235294" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="38" id="59j-TS-Shj"/>
+                                <constraint firstAttribute="width" constant="76" id="maA-T3-urz"/>
+                            </constraints>
+                            <state key="normal" title="充值">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="19"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="btnRechangeClicked:" destination="b0T-Cd-KFs" eventType="touchUpInside" id="AsM-W5-xj5"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="fr9-ve-ocZ" secondAttribute="trailing" constant="13" id="6bp-ss-1py"/>
+                        <constraint firstAttribute="bottom" secondItem="fr9-ve-ocZ" secondAttribute="bottom" constant="25" id="Mnc-6X-juJ"/>
+                        <constraint firstAttribute="bottom" secondItem="CE1-zI-A4R" secondAttribute="bottom" constant="55" id="PSJ-eR-92q"/>
+                        <constraint firstAttribute="trailing" secondItem="oZb-eG-g0w" secondAttribute="trailing" constant="12" id="Srw-NY-Fca"/>
+                        <constraint firstItem="CE1-zI-A4R" firstAttribute="leading" secondItem="mEX-T7-fF8" secondAttribute="leading" constant="13" id="b9G-eV-dl1"/>
+                        <constraint firstItem="oZb-eG-g0w" firstAttribute="leading" secondItem="mEX-T7-fF8" secondAttribute="leading" constant="12" id="hgl-HO-V8M"/>
+                        <constraint firstAttribute="trailing" secondItem="CE1-zI-A4R" secondAttribute="trailing" constant="13" id="is1-sm-edA"/>
+                        <constraint firstAttribute="bottom" secondItem="oZb-eG-g0w" secondAttribute="bottom" constant="24" id="wXc-3j-V88"/>
+                        <constraint firstAttribute="height" constant="86" id="x7h-g5-N7p"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IF0-mR-jyq">
+                    <rect key="frame" x="0.0" y="247" width="375" height="8"/>
+                    <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="8" id="jza-8b-epE"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="NB8-Tv-hPV" secondAttribute="trailing" id="2uC-0D-IJc"/>
                 <constraint firstItem="Nj6-t0-Vq8" firstAttribute="top" secondItem="b0T-Cd-KFs" secondAttribute="top" constant="35" id="7Ie-lg-JFn"/>
                 <constraint firstAttribute="trailing" secondItem="aKk-fn-f7o" secondAttribute="trailing" id="9Ca-lG-PSn"/>
+                <constraint firstItem="mEX-T7-fF8" firstAttribute="leading" secondItem="b0T-Cd-KFs" secondAttribute="leading" id="ALk-3d-1X1"/>
                 <constraint firstItem="hJy-Us-8kR" firstAttribute="top" secondItem="b0T-Cd-KFs" secondAttribute="top" constant="74" id="EJ1-Cw-m86"/>
                 <constraint firstItem="YY4-es-Qmf" firstAttribute="leading" secondItem="hJy-Us-8kR" secondAttribute="trailing" constant="12" id="EkI-k6-tNF"/>
                 <constraint firstItem="hJy-Us-8kR" firstAttribute="leading" secondItem="b0T-Cd-KFs" secondAttribute="leading" constant="13" id="GPH-hm-zn5"/>
                 <constraint firstItem="Nj6-t0-Vq8" firstAttribute="centerX" secondItem="b0T-Cd-KFs" secondAttribute="centerX" id="Hxn-0V-YEF"/>
                 <constraint firstItem="vVe-j2-juR" firstAttribute="leading" secondItem="hJy-Us-8kR" secondAttribute="trailing" constant="8" id="KAP-h0-bUK"/>
+                <constraint firstAttribute="bottom" secondItem="IF0-mR-jyq" secondAttribute="bottom" id="LZJ-wq-bqq"/>
+                <constraint firstAttribute="trailing" secondItem="IF0-mR-jyq" secondAttribute="trailing" id="Q6F-pZ-c5O"/>
                 <constraint firstItem="Nj6-t0-Vq8" firstAttribute="width" secondItem="b0T-Cd-KFs" secondAttribute="width" id="R1N-8B-mvx"/>
                 <constraint firstItem="YY4-es-Qmf" firstAttribute="top" secondItem="vVe-j2-juR" secondAttribute="bottom" constant="17" id="TaU-Rg-aoL"/>
                 <constraint firstItem="aKk-fn-f7o" firstAttribute="top" secondItem="b0T-Cd-KFs" secondAttribute="top" id="UMe-Ef-EHh"/>
+                <constraint firstAttribute="bottom" secondItem="mEX-T7-fF8" secondAttribute="bottom" constant="8" id="cRp-CR-VbE"/>
                 <constraint firstAttribute="trailing" secondItem="vVe-j2-juR" secondAttribute="trailing" id="ewR-90-0LH"/>
-                <constraint firstAttribute="bottom" secondItem="aKk-fn-f7o" secondAttribute="bottom" id="fCz-gI-i1w"/>
+                <constraint firstAttribute="trailing" secondItem="mEX-T7-fF8" secondAttribute="trailing" id="fgE-4f-Pf2"/>
                 <constraint firstItem="vVe-j2-juR" firstAttribute="top" secondItem="Nj6-t0-Vq8" secondAttribute="bottom" constant="34" id="gjq-eC-9O3"/>
                 <constraint firstItem="NB8-Tv-hPV" firstAttribute="top" secondItem="vVe-j2-juR" secondAttribute="bottom" constant="19" id="hLn-z9-yle"/>
                 <constraint firstItem="aKk-fn-f7o" firstAttribute="leading" secondItem="b0T-Cd-KFs" secondAttribute="leading" id="oZL-vf-3Xo"/>
                 <constraint firstItem="NB8-Tv-hPV" firstAttribute="leading" secondItem="YY4-es-Qmf" secondAttribute="trailing" constant="11" id="rZx-0M-o3I"/>
+                <constraint firstItem="IF0-mR-jyq" firstAttribute="leading" secondItem="b0T-Cd-KFs" secondAttribute="leading" id="vPY-S9-55D"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="btnRecharge" destination="fr9-ve-ocZ" id="ABp-iI-Mv7"/>
                 <outlet property="imgHead" destination="hJy-Us-8kR" id="Bmw-PL-4Dv"/>
+                <outlet property="labMoney" destination="CE1-zI-A4R" id="QTM-EF-01R"/>
+                <outlet property="labMoneyUp" destination="oZb-eG-g0w" id="Zin-D8-qIz"/>
                 <outlet property="labName" destination="vVe-j2-juR" id="gVE-KR-IiJ"/>
                 <outlet property="labUserId" destination="NB8-Tv-hPV" id="0ha-Ci-NUJ"/>
             </connections>
-            <point key="canvasLocation" x="240.5" y="-350.5"/>
+            <point key="canvasLocation" x="237" y="-353"/>
         </view>
+        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="nq3-qD-4zc">
+            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        </activityIndicatorView>
     </objects>
     <resources>
+        <image name="default_head" width="90" height="90"/>
         <image name="mine_head_bg" width="320" height="168"/>
     </resources>
 </document>
