--- a/InKeLive-gcz_99/InKeLive/Main/动态/VC/SendDynamicViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Main/动态/VC/SendDynamicViewController.xib
@@ -18,7 +18,92 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="At5-gD-e9j">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="xyG-RO-Ovn"/>
+                    </constraints>
+                    <items>
+                        <navigationItem title="发动态" id="MIf-rj-Q6Q">
+                            <barButtonItem key="leftBarButtonItem" style="plain" id="3Ad-hb-c3Z">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lhQ-d0-wYf">
+                                    <rect key="frame" x="16" y="0.0" width="44" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="取消">
+                                        <color key="titleColor" red="0.090196078431372548" green="0.090196078431372548" blue="0.090196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                </button>
+                            </barButtonItem>
+                            <barButtonItem key="rightBarButtonItem" style="plain" id="Bko-I4-NLl">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zMH-VN-zIZ">
+                                    <rect key="frame" x="315" y="0.0" width="44" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="发布">
+                                        <color key="titleColor" red="0.090196078430000007" green="0.090196078430000007" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                </button>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BS1-Aa-H4F">
+                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aBW-rZ-e75">
+                            <rect key="frame" x="0.0" y="10" width="375" height="172"/>
+                            <subviews>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4VD-nf-YOW">
+                                    <rect key="frame" x="12" y="8" width="351" height="74"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                </textView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CTd-CA-Eb6">
+                                    <rect key="frame" x="12" y="96" width="65" height="65"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="65" id="laK-9Y-v2r"/>
+                                        <constraint firstAttribute="height" constant="65" id="nAu-ha-ls3"/>
+                                    </constraints>
+                                    <state key="normal" title="Button" image="dynamic_take_photo"/>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="4VD-nf-YOW" firstAttribute="top" secondItem="aBW-rZ-e75" secondAttribute="top" constant="8" id="56O-Bt-X9O"/>
+                                <constraint firstAttribute="bottom" secondItem="CTd-CA-Eb6" secondAttribute="bottom" constant="11" id="Ebf-GM-lLN"/>
+                                <constraint firstItem="4VD-nf-YOW" firstAttribute="leading" secondItem="aBW-rZ-e75" secondAttribute="leading" constant="12" id="UCZ-f1-Yre"/>
+                                <constraint firstAttribute="bottom" secondItem="4VD-nf-YOW" secondAttribute="bottom" constant="90" id="ZxU-fC-ZO9"/>
+                                <constraint firstAttribute="trailing" secondItem="4VD-nf-YOW" secondAttribute="trailing" constant="12" id="abg-LC-7Pd"/>
+                                <constraint firstItem="CTd-CA-Eb6" firstAttribute="leading" secondItem="aBW-rZ-e75" secondAttribute="leading" constant="12" id="kaS-hq-wDj"/>
+                                <constraint firstAttribute="height" constant="172" id="yKN-La-eFe"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="aBW-rZ-e75" secondAttribute="trailing" id="Qvy-rY-wuS"/>
+                        <constraint firstItem="aBW-rZ-e75" firstAttribute="leading" secondItem="BS1-Aa-H4F" secondAttribute="leading" id="nvl-44-hcZ"/>
+                        <constraint firstItem="aBW-rZ-e75" firstAttribute="top" secondItem="BS1-Aa-H4F" secondAttribute="top" constant="10" id="rmM-Kd-oAp"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="At5-gD-e9j" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="2rf-5w-mIx"/>
+                <constraint firstItem="BS1-Aa-H4F" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FK8-eh-R4d"/>
+                <constraint firstItem="At5-gD-e9j" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Pby-cb-e6Q"/>
+                <constraint firstAttribute="trailing" secondItem="At5-gD-e9j" secondAttribute="trailing" id="bWu-Ra-hXj"/>
+                <constraint firstItem="BS1-Aa-H4F" firstAttribute="top" secondItem="At5-gD-e9j" secondAttribute="bottom" id="nTP-zu-zlx"/>
+                <constraint firstAttribute="bottom" secondItem="BS1-Aa-H4F" secondAttribute="bottom" id="o0w-IK-xBr"/>
+                <constraint firstItem="At5-gD-e9j" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="u0q-4W-BBN"/>
+                <constraint firstAttribute="trailing" secondItem="BS1-Aa-H4F" secondAttribute="trailing" id="vJe-Th-4Rp"/>
+            </constraints>
+            <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="dynamic_take_photo" width="65" height="65"/>
+    </resources>
 </document>
