--- a/InKeLive-gcz_99/InKeLive/Main/直播/PrivateChatView.xib
+++ b/InKeLive-gcz_99/InKeLive/Main/直播/PrivateChatView.xib
@@ -166,9 +166,11 @@
                 <outlet property="HeadTableView" destination="KKZ-xD-1mQ" id="jU1-0W-kz6"/>
                 <outlet property="btnBg" destination="q4h-pX-feq" id="HRR-fK-WP4"/>
                 <outlet property="btnSend" destination="FgN-1n-JF1" id="L2g-Dh-GCe"/>
+                <outlet property="chatBgView" destination="7vB-yK-lAC" id="NDa-3S-tlS"/>
                 <outlet property="chatTableView" destination="psz-Yb-kFQ" id="fwm-FG-8T5"/>
                 <outlet property="labNameAndID" destination="nXU-7z-4kM" id="UZ9-uG-g1Q"/>
                 <outlet property="textFieldChat" destination="AZv-dK-M7J" id="pEw-bz-gJc"/>
+                <outlet property="topMargin" destination="3fC-LV-Hwh" id="00B-NO-Jn7"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
