--- a/InKeLive-gcz_99/InKeLive/Person/SettingViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/SettingViewController.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingViewController">
             <connections>
+                <outlet property="btnExitLogin" destination="lZX-u4-gr2" id="Nvh-el-T9F"/>
                 <outlet property="tableView" destination="9NX-9G-A66" id="ewL-GC-jJm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -22,14 +22,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9NX-9G-A66">
-                    <rect key="frame" x="0.0" y="84" width="375" height="300"/>
+                    <rect key="frame" x="0.0" y="74" width="375" height="390"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="300" id="dYc-y2-g9d"/>
+                        <constraint firstAttribute="height" constant="390" id="dYc-y2-g9d"/>
                     </constraints>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZX-u4-gr2">
-                    <rect key="frame" x="13" y="405" width="349" height="40"/>
+                    <rect key="frame" x="13" y="485" width="349" height="40"/>
                     <color key="backgroundColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="FTq-H2-dkf"/>
@@ -38,18 +38,20 @@
                     <state key="normal" title="退出登录">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="btnExitLoginClicked:" destination="-1" eventType="touchUpInside" id="SKt-nD-eq8"/>
+                    </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="9NX-9G-A66" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="64" id="BQn-cr-Qgg"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="9NX-9G-A66" secondAttribute="trailing" id="IEi-tf-rhS"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="lZX-u4-gr2" secondAttribute="trailing" constant="13" id="LTT-4H-QkA"/>
+                <constraint firstItem="9NX-9G-A66" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="74" id="BQn-cr-Qgg"/>
+                <constraint firstAttribute="trailing" secondItem="9NX-9G-A66" secondAttribute="trailing" id="IEi-tf-rhS"/>
+                <constraint firstAttribute="trailing" secondItem="lZX-u4-gr2" secondAttribute="trailing" constant="13" id="LTT-4H-QkA"/>
                 <constraint firstItem="lZX-u4-gr2" firstAttribute="top" secondItem="9NX-9G-A66" secondAttribute="bottom" constant="21" id="SY6-1Z-K1S"/>
-                <constraint firstItem="lZX-u4-gr2" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="13" id="WL5-nr-YrY"/>
-                <constraint firstItem="9NX-9G-A66" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="fRd-KL-4Ji"/>
+                <constraint firstItem="lZX-u4-gr2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="13" id="WL5-nr-YrY"/>
+                <constraint firstItem="9NX-9G-A66" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fRd-KL-4Ji"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
     </objects>
 </document>
