个人界面修改

--- a/InKeLive-gcz_99/InKeLive/Person/SecurityViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/SecurityViewController.xib
@@ -11,8 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecurityViewController">
             <connections>
-                <outlet property="tableView" destination="YtM-a6-ZkU" id="wYz-QZ-iu0"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="Re6-wp-ylm"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
