--- a/InKeLive-gcz_99/InKeLive/Main/直播/LiveUserInfoView.xib
+++ b/InKeLive-gcz_99/InKeLive/Main/直播/LiveUserInfoView.xib
@@ -60,6 +60,14 @@
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTC-26-jwy">
+                            <rect key="frame" x="85" y="149.5" width="16" height="16"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="16" id="WMm-fq-fkL"/>
+                                <constraint firstAttribute="width" constant="16" id="zmY-uT-uqe"/>
+                            </constraints>
+                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="心情" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wck-3p-yil">
                             <rect key="frame" x="10" y="188" width="250" height="39"/>
                             <constraints>
@@ -141,6 +149,7 @@
                         <constraint firstItem="c0R-1J-Bsz" firstAttribute="leading" secondItem="lbX-dT-onw" secondAttribute="leading" id="05J-LL-agj"/>
                         <constraint firstItem="FHQ-rU-IUT" firstAttribute="top" secondItem="QiI-2Z-lEh" secondAttribute="top" id="3P2-qX-CS5"/>
                         <constraint firstAttribute="height" constant="290" id="5LS-Ue-sa6"/>
+                        <constraint firstItem="GdF-m0-3EC" firstAttribute="centerY" secondItem="cTC-26-jwy" secondAttribute="centerY" id="7tX-lx-cdB"/>
                         <constraint firstAttribute="trailing" secondItem="UsG-7M-wxA" secondAttribute="trailing" constant="9" id="Bcg-CH-sDT"/>
                         <constraint firstItem="GdF-m0-3EC" firstAttribute="top" secondItem="DLE-q6-l8R" secondAttribute="top" constant="152" id="DoJ-Ye-aWW"/>
                         <constraint firstItem="WaD-s9-0E5" firstAttribute="centerX" secondItem="DLE-q6-l8R" secondAttribute="centerX" id="ErK-0V-7Nd"/>
@@ -165,6 +174,7 @@
                         <constraint firstAttribute="bottom" secondItem="FHQ-rU-IUT" secondAttribute="bottom" id="hMW-W1-rv2"/>
                         <constraint firstAttribute="width" constant="270" id="mQm-Mn-1ps"/>
                         <constraint firstItem="Ya6-Kk-K9G" firstAttribute="top" secondItem="DLE-q6-l8R" secondAttribute="top" constant="21" id="obV-Ne-9tZ"/>
+                        <constraint firstItem="cTC-26-jwy" firstAttribute="leading" secondItem="DLE-q6-l8R" secondAttribute="leading" constant="85" id="q0p-3L-BG1"/>
                         <constraint firstAttribute="bottom" secondItem="jHw-tP-NGW" secondAttribute="bottom" id="raD-Or-sss"/>
                         <constraint firstItem="jRo-2q-B6W" firstAttribute="trailing" secondItem="FHQ-rU-IUT" secondAttribute="trailing" id="s36-js-4NH"/>
                         <constraint firstAttribute="bottom" secondItem="lbX-dT-onw" secondAttribute="bottom" constant="9" id="woN-ZI-iIp"/>
@@ -191,12 +201,13 @@
                 <outlet property="userAliasLabel" destination="WaD-s9-0E5" id="uAY-Um-9NH"/>
                 <outlet property="userHeadImageView" destination="Ya6-Kk-K9G" id="TYU-Hz-aMH"/>
                 <outlet property="userLevelLable" destination="wck-3p-yil" id="P63-fW-ygL"/>
+                <outlet property="viewLevel" destination="cTC-26-jwy" id="Zun-OC-dFR"/>
             </connections>
             <point key="canvasLocation" x="-6" y="67"/>
         </view>
     </objects>
     <resources>
-        <image name="default_head" width="86" height="86"/>
+        <image name="default_head" width="90" height="90"/>
         <image name="userinfo_close" width="15" height="15"/>
     </resources>
 </document>
