--- a/InKeLive-gcz_99/InKeLive/Person/BindingViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/BindingViewController.xib
@@ -11,6 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BindingViewController">
             <connections>
+                <outlet property="btnBinding" destination="idd-lF-HZJ" id="U2N-W0-dp9"/>
+                <outlet property="btnCode" destination="92d-BH-lj0" id="9CK-I8-U7q"/>
+                <outlet property="textFieldCode" destination="hac-FQ-dCy" id="BKw-QH-5xe"/>
+                <outlet property="textFieldPhone" destination="Lle-g4-pOI" id="2PR-FA-jXx"/>
                 <outlet property="view" destination="YKx-GZ-MNE" id="cjY-2Y-eZO"/>
             </connections>
         </placeholder>
@@ -64,6 +68,9 @@
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="btnCodeClicked:" destination="-1" eventType="touchUpInside" id="29q-bM-LQZ"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oAb-KH-BEl">
                     <rect key="frame" x="12" y="180" width="351" height="1"/>
@@ -83,6 +90,9 @@
                     <state key="normal" title="绑定">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="btnBindingClicked:" destination="-1" eventType="touchUpInside" id="g34-9E-J7b"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
