9 qq和微信分享功能 10聊天和刷礼物增加平台消费级别 11礼物区样式调整 12赠送礼物不要关闭礼物区 7大厅最上面要做橙色 查找房间进入房间有bug  浏览历史记录有重映

--- a/InKeLive-gcz_99/InKeLive/Person/RemoveBindingViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Person/RemoveBindingViewController.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="btnCode" destination="lZQ-c1-gFe" id="VLE-Vy-Sqs"/>
                 <outlet property="btnSure" destination="jCC-OW-kKe" id="dbT-bX-9Kn"/>
-                <outlet property="labPhone" destination="etG-lC-AmT" id="LrF-RT-2Ww"/>
+                <outlet property="labPhone" destination="etG-lC-AmT" id="yXu-Sd-uH0"/>
                 <outlet property="textFieldCode" destination="Olo-7e-PHv" id="pQo-Id-qoq"/>
                 <outlet property="textFieldPhone" destination="L94-oU-Kzi" id="kJ2-tn-KpI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
